syntax = "proto3";
package poset.proto;
import "peers/proto/peer.proto";

option java_outer_classname = "PEvent";

enum TransactionType {
  PEER_ADD = 0;
  PEER_REMOVE = 1;
}

message InternalTransaction {
  TransactionType Type = 1;
  peers.proto.Peer peer = 2;
}

message BlockSignature {
  bytes Validator = 1;
  int64 Index = 2;
  string Signature = 3;
}

message EventBody {
  repeated bytes Transactions = 1;
  repeated InternalTransaction InternalTransactions = 2;
  repeated string Parents = 3;
  bytes Creator = 4;
  int64 Index = 5;
  repeated BlockSignature BlockSignatures = 6;
}

message EventMessage {
  EventBody Body = 1;
  string Signature = 2;
  bytes FlagTable = 3;
  repeated string WitnessProof = 4;
  int64 SelfParentIndex = 5;
  int64 OtherParentCreatorID = 6;
  int64 OtherParentIndex = 7;
  int64 CreatorID = 8;
  int64 TopologicalIndex = 9;
}
